[package]
name = "common"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
embedded-graphics = "0.8.1"
profont = "0.7.0"
fixedstr = { version = "0.5", features = ["no-alloc"] }
arrayvec = { version = "0.7.4", default-features = false, features = [] }
ringbuffer = { version = "0.15.0", default-features = false, features = [] }
bxcan = "0.8.0"
int-enum = "1.1.2"
safe-regex = { version = "0.3.0", default-features = false, features = [] }
#arrayvec = { version = "0.7.4", default-features = false, features = [] }
#nalgebra = { version = "0.32.3", default-features = false, features = [ "libm" ] }
#micromath = "2.1.0"

[dev-dependencies]
#stderrlog = { version = "0.6.0" }

