[package]
name = "desktop"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
app = { path = "../app" }

piston_window = "0.132.0"
piston = "1.0.0"
arrayvec = "0.7.4"
rand = "0.8.5"
clap = { version = "4.4.18", features = ["derive"] }
log = { version = "0.4" }
stderrlog = { version = "0.6.0" }
embedded-graphics-simulator = "0.7.0"
image = "0.25.5"
reqwest = { version = "0.11", features = ["blocking"] }
ringbuffer = { version = "0.15.0", default-features = false }
fixedstr = { version = "0.5", features = ["no-alloc"] }
