[package]
name = "embedded"
version.workspace = true
edition.workspace = true
authors.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Platform specific
cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
#cortex-m-rt = "0.7.0"
stm32f4xx-hal = { version = "0.20.0", features = ["stm32f407", "rtic2", "usb_fs", "can"] }
embedded-hal = "1"
rtic = { version = "2.0.1", features = ["thumbv7-backend"] }
rtic-monotonics = { version = "1.5.0", features = ["cortex-m-systick"] }
usb-device = "0.3.1"
usbd-serial = "0.2.0"
eeprom24x = "0.7.0"
embedded-hal-bus = "0.1.0"
critical-section = { version = "1.1", features = [] }

# Generic embedded
ringbuffer = { version = "0.15.0", default-features = false }

# Cross platform
micromath = "2.0.0"
arrayvec = { version = "0.7.4", default-features = false, features = [] }
fixedstr = { version = "0.5", features = ["no-alloc"] }

# Our own thing
common = { path = "../common" }
app = { path = "../app" }

# Stash of unused but possibly useful stuff
#defmt = "0.3"
#defmt-rtt = "0.4"
#embedded-io = { version = "0.6.0" }
#embedded-io-async = { version = "0.6.1" }
#panic-probe = { version = "0.3", features = ["print-defmt"] }
#panic-probe = { version = "0.3", features = [] }
#nb = "1.1.0"
#rtic-sync = { version = "1.2.0" }
#nalgebra = { version = "0.32.3", default-features = false, features = [ "libm" ] }
#futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
#heapless = { version = "0.8", default-features = false }
#embedded-storage = "0.3.1"
#micromath = "2.0.0"
#static_cell = { version = "2", features = ["nightly"]}
#chrono = { version = "^0.4", default-features = false}
#once_cell = { version = "1.19.0", default-features = false, features = ["race"] }
